add angular validations

--- a/style.css
+++ b/style.css
@@ -75,3 +75,11 @@ img{
 .btn-primary:hover {
   background: #ac005f;
 }
+
+.ng-invalid.ng-dirty{
+  border-color: red;
+}
+
+.ng-valid.ng-dirty{
+  border-color: green;
+}
